fixed backdrop filter on firefox

--- a/style.css
+++ b/style.css
@@ -283,11 +283,23 @@ main {
 }
 
 .project-info {
-    height: 100%;
-    width: 100%;
-    backdrop-filter: blur(5px);
-    background-color: #f2f2f2e5;
-    padding: 20px;
+  background-color: rgba(255, 255, 255, 0.95);
+  height: 100%;
+  width: 100%;
+  padding: 20px;
+  transition: .2s;
+}
+
+@supports ((-webkit-backdrop-filter: blur(5px)) or (backdrop-filter: blur(5px))) {
+    .project-info {
+        background-color: #f2f2f2d0;
+        backdrop-filter: blur(5px);
+    }
+  }
+
+.project:hover .project-info {
+    opacity: 0;
+    transition: .2s;
 }
 
 .project-info ion-icon {
